2009-08-26  Jan Moringen  <jmoringe@techfak.uni-bielefeld.de>

	* ChangeLog (whole file): updated

	* rudel.el (rudel-session-start-hook): new variable; session start
	hook function list
	(rudel-session-end-hook): new variable; session end hook function
	list
	(rudel-join-session): run session start hook
	(rudel-end-session): run session end hook

	* obby/rudel-obby-server.el
	(rudel-obby-client::rudel-obby/obby_document_create): call
	`generate-new-buffer-name' on complete buffer name; not just name
	part

	* obby/rudel-obby-server.el
	(rudel-obby-client::rudel-obby/obby_document/subscribe): send
	number of bytes instead of number of characters

	* obby/rudel-obby-client.el
	(rudel-obby-client-state-document-synching::remaining-bytes):
	fixed initarg num-bytes -> remaining-bytes

	* rudel.el (rudel-session::add-document-hook): new slot; run when
	a document gets added to the session
	(rudel-session::remove-document-hook): new slot; run when a
	document gets removed from the session
	(rudel-session::rudel-add-document): run add document hook
	(rudel-session::rudel-remove-document): run remove document hook
	(rudel-document::unsubscribe-hook): fixed initarg subscribe-hook
	-> unsubscribe-hook

2009-08-25  Jan Moringen  <jmoringe@techfak.uni-bielefeld.de>

	* www/index.html (Download): link to http://bazaar-vcs.org;
	improved wording

	* www/index.html (Download): changed link to source; add browse
	source link for bzr

	* INSTALL (REQUIREMENTS): precise CEDET release version

	* obby/rudel-obby-server.el
	(rudel-obby-client::rudel-obby/obby_user_colour): run change hook
	after setting slot
	(rudel-obby-server::rudel-remove-client): run change hook after
	setting slot
	* obby/rudel-obby-client.el
	(rudel-obby-client-state-idle::rudel-obby/net6_client_part): run
	change hook after setting slots
	(rudel-obby-client-state-idle::rudel-obby/obby_user_colour): run
	change hook after setting slot
	* rudel.el (class rudel-user): derive from `rudel-hook-object'