@@ -19,8 +19,7 @@
    CEDET since it fixes a serious problem in the object system Eieio.
 
 ** GnuTLS (optional)
-   Encrypted connections to Gobby servers require the gnutls-cli
-   program.
+   Connections to Gobby servers require the gnutls-cli program.
 
 ** Avahi (optional)
    The Avahi daemon (http://avahi.org) is required for automatic
@@ -31,46 +30,23 @@
 
 * INSTALLING
 
-  To install Rudel, download a releases version or the current
+  To install Rudel, download a released version or the current
   development version from http://sourceforge.net/projects/rudel/ and
   place the code in any directory you like.
 
-  If your Emacs load path does not already contain the directory in
-  which the code resides, add the following to your .emacs file
-  (assuming the code resides in a directory called `SOMEDIR/rudel'):
+  Once Eieio (above) is installed, add the following to your personal
+  Emacs configuration:
 
-  : (add-to-list 'load-path "SOMEDIR/rudel/")
-  : (add-to-list 'load-path "SOMEDIR/rudel/jupiter/")
-  : (add-to-list 'load-path "SOMEDIR/rudel/obby/")
-  : (add-to-list 'load-path "SOMEDIR/rudel/zeroconf/")
+  (load-file "/path/to/rudel/rudel-loaddefs.el")
 
-  This will allow Emacs to load Rudel code, but will not actually load
-  Rudel. To avoid loading all the Rudel code in every Emacs session, I
-  recommend auto loading. Auto loading information is stored in a file
-  called `rudel-loaddefs.el' which can be generated by executing
-
-  : make autoloads
-
-  in the `rudel' directory (or equivalent) mentioned above. Once the
-  file has been generated, auto loading of Rudel can be activated
-  permanently by executing
-
-  : (load "SOMEDIR/rudel/rudel-loaddefs.el")
-
-  in your .emacs file.
+  This will set Rudel up to be loaded on demand when the command
+  `rudel-join-session' is invoked. (Bound to C-c c j).
 
 * COMPILING
 
   In order to achieve better performance, Emacs can byte-compiled the
-  Rudel code. This can be done by executing
-
-  : make rudel obby jupiter zeroconf
-
-  or just (which will also generate auto loading information)
-
-  : make
-
-  in the `rudel' directory (or equivalent) mentioned above.
+  Rudel code. This can be done by opening compile.el in Emacs and
+  invoking M-x eval-buffer.
 
 Local variables:
 mode: org
