@@ -1,35 +1,0 @@
-# Automatically Generated Makefile by EDE.
-# For use with: make
-#
-# DO NOT MODIFY THIS FILE OR YOUR CHANGES MAY BE LOST.
-# EDE is the Emacs Development Environment.
-# http://cedet.sourceforge.net/ede.shtml
-#
-
-top=../
-ede_FILES=Project.ede Makefile
-
-VERSION=0.2
-DISTDIR=$(top)rudel-$(VERSION)/doc
-
-all: card.pdf
-
-card.pdf: card.tex
-	pdflatex -t landscape $<
-
-tags:
-
-.PHONY: dist
-
-dist: card.pdf
-	mkdir $(DISTDIR)
-	cp card.pdf $(ede_FILES) $(DISTDIR)
-
-Makefile: Project.ede
-	@echo Makefile is out of date!  It needs to be regenerated by EDE.
-	@echo If you have not modified Project.ede, you can use 'touch' to update the Makefile time stamp.
-	@false
-
-
-
-# End of Makefile
