@@ -1,51 +1,0 @@
-# Automatically Generated Makefile by EDE.
-# For use with: make
-#
-# DO NOT MODIFY THIS FILE OR YOUR CHANGES MAY BE LOST.
-# EDE is the Emacs Development Environment.
-# http://cedet.sourceforge.net/ede.shtml
-#
-
-top=../
-ede_FILES=Project.ede Makefile
-
-wave_LISP=rudel-wave.el
-EMACS=emacs
-EMACSFLAGS=-batch --no-site-file
-LOADPATH= ../
-VERSION=0.2
-DISTDIR=$(top)rudel-$(VERSION)/wave
-
-
-
-all: wave
-
-.PHONY: wave
-wave: $(wave_LISP)
-	@echo "(add-to-list 'load-path nil)" > $@-compile-script
-	for loadpath in . ${LOADPATH}; do \
-	   echo "(add-to-list 'load-path \"$$loadpath\")" >> $@-compile-script; \
-	done;
-	@echo "(setq debug-on-error t)" >> $@-compile-script
-	"$(EMACS)" $(EMACSFLAGS) -l $@-compile-script -f batch-byte-compile $^
-
-tags:
-
-
-clean:
-	rm -f *.elc
-
-.PHONY: dist
-
-dist:
-	mkdir $(DISTDIR)
-	cp $(wave_LISP) $(ede_FILES) $(DISTDIR)
-
-Makefile: Project.ede
-	@echo Makefile is out of date!  It needs to be regenerated by EDE.
-	@echo If you have not modified Project.ede, you can use 'touch' to update the Makefile time stamp.
-	@false
-
-
-
-# End of Makefile
