@@ -1,3 +1,15 @@
+2009-09-27  Phil Hagelberg <technomancy@gmail.com>
+
+	* INSTALL: Mention new install process using compile.el and
+	rudel-loaddefs.el.
+
+	* rudel-loaddefs.el: Autoload rudel as one unit instead of
+	piece-by-piece. Remove eieio dependency from autoloads.
+
+	* compile.el: Perform compilation from Elisp
+
+	* Makefile: Remove error-prone CEDET-autogenerated build scripts.
+
 2009-08-26  Jan Moringen  <jmoringe@techfak.uni-bielefeld.de>
 
 	* ChangeLog (whole file): updated
